appId: com.logseq.logseq
---
- runFlow:
    file: "__LOGSEQ_E2E_SETUP_FLOW__"
- launchApp
- extendedWaitUntil:
    visible:
      id: "button.sidebar"
    timeout: 30000
- tapOn:
    id: "button.sidebar"
- tapOn:
    id: "link.sidebar.graphs"
- assertVisible:
    id: "screen.graphs"
- assertVisible: "Local graphs:"
- assertVisible:
    id: "button.graphs.refresh"
- waitForAnimationToEnd
- tapOn:
    id: "button.graph-add"
    retryTapIfNoChange: true
- assertVisible: "Add sync graph"
- assertVisible: "End-to-end encryption"
- tapOn: "Cancel"
- assertVisible:
    id: "screen.graphs"
- tapOn:
    id: "button.sidebar"
- tapOn:
    id: "link.sidebar.journals"
- assertNotVisible:
    id: "screen.graphs"
